fix: ensure overflow is hidden in contact section styles

--- a/src/app/components/contact-section/contact-section.component.css
+++ b/src/app/components/contact-section/contact-section.component.css
@@ -10,6 +10,7 @@
     gap: 2rem;
     box-shadow: 0 0 2px 0 var(--dark-color-800);
     position: relative;
+    overflow: hidden;
 }
 
 .contact::before {
